--- a/README.asciidoc
+++ b/README.asciidoc
@@ -3,9 +3,9 @@
 == Problems
 
 [latex]
-------------------------------------------------------------------------
--\Delta \Psi + \abs{\Psi}^2 = f(x), x \in \Omega, \Omega = [-\pi, \pi]^3
-------------------------------------------------------------------------
+-----------------------------------------------------------------------------
+-\Delta \Psi + \abs{\Psi}^2 \Psi = f(x), x \in \Omega, \Omega = [-\pi, \pi]^3
+-----------------------------------------------------------------------------
 
 == Usgae
 
